TEST_PROGRAMS/VALID/02/values.go

package main;
func main() {
    
        // Strings, which can be added together with `+`.
            println("go" + "lang")
            
                // Integers and floats.
                    println("1+1 =", 1+1)
                        println("7.0/3.0 =", 7.0/3.0)
                        
                            // Booleans, with boolean operators as you'd expect.
                                println(true && false)
                                    println(true || false)
                                        println(!true)

                x := 5; if x < y {
        return x
} else if x > z {
        return z
} else {
        return y
}
}


