TEST_PROGRAMS/INVALID/03/invalid_if4.go
package main
func main() {
	if x + y {
	        // statements
	} else if x {

	} else {

	}
	if x.y = 5;{
		
	}
}
